--- a/vgd/package.json
+++ b/vgd/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.0.3",
+    "next": "^15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.12.11",
+    "babel-preset-next": "^1.0.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3"
   }
