--- a/vgd/package.json
+++ b/vgd/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "next build && next export",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.25.9",
@@ -20,7 +22,8 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.12.11",
     "babel-preset-next": "^1.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.0.3",
+    "gh-pages": "^6.2.0"
   }
 }
