--- a/vgd/package.json
+++ b/vgd/package.json
@@ -13,17 +13,18 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.25.9",
     "gsap": "^3.12.5",
-    "next": "^15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.26.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.12.11",
-    "babel-preset-next": "^1.0.1",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.14.5",
+    "babel-preset-next": "^1.4.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.0.3",
-    "gh-pages": "^6.2.0"
+    "gh-pages": "^6.2.0",
+    "next": "^15.0.3"
   }
 }
