--- a/vgd/package.json
+++ b/vgd/package.json
@@ -2,6 +2,7 @@
   "name": "vgd",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mikixit.github.io/van-gogh-digital",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,8 +14,8 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.25.9",
     "gsap": "^3.12.5",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66 855b96-20241106"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
