--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -34,7 +34,7 @@ jobs:
           node-version: "15"
           cache: npm
 
-      - name: Install dep
+      - name: Install deps
         run: npm install
 
       - name: Build e Deploy
