--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -17,7 +17,7 @@ concurrency:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu -latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,6 +35,7 @@ jobs:
           cache: npm
 
       - name: Install deps
+        working-directory: /home/runner/work/van-gogh-digital//vgd
         run: npm install
 
       - name: Build e Deploy
